// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: events/ZFt0WhQAAHnPEH7P) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"W5fV5iYAACQAMxHb","label":"Festival"}",
      "interpretations": [
        "{"type":"EventInterpretation","id":"XkFGqxEAACIAIhNH","label":"British Sign Language interpreted"}",
        "{"type":"EventInterpretation","id":"WmXl4iQAACUAnyDr","label":"Speech-to-text"}",
      ],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"online","label":"Online","type":"EventAttendance"}",
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "W5fV5iYAACQAMxHb",
        "label": "Festival",
        "type": "EventFormat",
      },
      "id": "ZFt0WhQAAHnPEH7P",
      "image": {
        "16:9": {
          "alt": "Photograph of a farmer getting ready to harvest his organic crop of native Ragi in Kariyappanadoddi, India. Behind him are hills and a small single storey building. Interwoven into the scene is a graphic element made up of thin red drawn circular lines, which create a larger organic pattern behind the farmer.",
          "copyright": "Farmer Basavaraj in Kariyappanadoddi inspects his ragi crop before harvesting near Bannerghatta, India
 | | | | | Quicksand |",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 0.8,
          },
          "id": "ZGYrjxQAADxsO9nG",
          "url": "https://images.prismic.io/wellcomecollection/0793d963-8807-4525-a3d7-e77fa4435baa_LBE+Key+Image+04.jpg?auto=compress,format&rect=0,0,4000,2250&w=3200&h=1800",
        },
        "32:15": {
          "alt": "Photograph of a farmer getting ready to harvest his organic crop of native Ragi in Kariyappanadoddi, India. Behind him are hills and a small single storey building. Interwoven into the scene is a graphic element made up of thin red drawn circular lines, which create a larger organic pattern behind the farmer.",
          "copyright": "Farmer Basavaraj in Kariyappanadoddi inspects his ragi crop before harvesting near Bannerghatta, India
 | | | | | Quicksand |",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -185,
            "zoom": 0.8,
          },
          "id": "ZGYrjxQAADxsO9nG",
          "url": "https://images.prismic.io/wellcomecollection/0793d963-8807-4525-a3d7-e77fa4435baa_LBE+Key+Image+04.jpg?auto=compress,format&rect=0,232,4000,1875&w=3200&h=1500",
        },
        "alt": "Photograph of a farmer getting ready to harvest his organic crop of native Ragi in Kariyappanadoddi, India. Behind him are hills and a small single storey building. Interwoven into the scene is a graphic element made up of thin red drawn circular lines, which create a larger organic pattern behind the farmer.",
        "copyright": "Farmer Basavaraj in Kariyappanadoddi inspects his ragi crop before harvesting near Bannerghatta, India
 | | | | | Quicksand |",
        "dimensions": {
          "height": 2250,
          "width": 4000,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ZGYrjxQAADxsO9nG",
        "square": {
          "alt": "Photograph of a farmer getting ready to harvest his organic crop of native Ragi in Kariyappanadoddi, India. Behind him are hills and a small single storey building. Interwoven into the scene is a graphic element made up of thin red drawn circular lines, which create a larger organic pattern behind the farmer.",
          "copyright": "Farmer Basavaraj in Kariyappanadoddi inspects his ragi crop before harvesting near Bannerghatta, India
 | | | | | Quicksand |",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1709,
            "y": 0,
            "zoom": 1.4222222222222223,
          },
          "id": "ZGYrjxQAADxsO9nG",
          "url": "https://images.prismic.io/wellcomecollection/0793d963-8807-4525-a3d7-e77fa4435baa_LBE+Key+Image+04.jpg?auto=compress,format&rect=1202,0,2250,2250&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/0793d963-8807-4525-a3d7-e77fa4435baa_LBE+Key+Image+04.jpg?auto=format,compress",
      },
      "interpretations": [
        {
          "id": "XkFGqxEAACIAIhNH",
          "label": "British Sign Language interpreted",
          "type": "EventInterpretation",
        },
        {
          "id": "WmXl4iQAACUAnyDr",
          "label": "Speech-to-text",
          "type": "EventInterpretation",
        },
      ],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "online",
            "label": "Online",
            "type": "EventAttendance",
          },
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": true,
        "places": [
          {
            "id": "XEnJIhUAAArdgVsW",
            "label": "Throughout our building",
            "type": "EventPlace",
          },
          {
            "id": "Wn1fvyoAACgAH_yG",
            "label": "Reading Room",
            "type": "EventPlace",
          },
          {
            "id": "ZFtbbRQAAHnPEAU_",
            "label": "Restaurant, level 2",
            "type": "EventPlace",
          },
          {
            "id": "Wn1gvyoAACgAIAEF",
            "label": "Henry Wellcome Auditorium",
            "type": "EventPlace",
          },
          {
            "id": "Wn3ZFyoAACkAIgPT",
            "label": "The Studio",
            "type": "EventPlace",
          },
          {
            "id": "ZFtUdhQAAHnPD-Q-",
            "label": "Crypt Gallery",
            "type": "EventPlace",
          },
          {
            "id": "Wn1gUioAACoAH_8S",
            "label": "The Forum",
            "type": "EventPlace",
          },
          {
            "id": "Wn1gnioAACoAIABr",
            "label": "Ground floor Atrium",
            "type": "EventPlace",
          },
          {
            "id": "ZFtU2hQAADxsD-Yc",
            "label": "Staircases and landings",
            "type": "EventPlace",
          },
          {
            "id": "WoLtUioAACkANrUM",
            "label": "Viewing Room",
            "type": "EventPlace",
          },
          {
            "id": "Ys1RWBEAACMAgik4",
            "label": "Studio Breakout Room",
            "type": "EventPlace",
          },
        ],
        "type": "EventLocations",
      },
      "series": [
        {
          "contributors": [
            "Land Body Ecologies",
            "The Hub",
          ],
          "id": "ZFt3UBQAAMFmEIya",
          "title": "Land Body Ecologies Festival",
        },
      ],
      "times": [
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T10:20:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T10:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T14:20:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T14:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T12:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T11:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T13:30:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T12:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T14:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T13:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T15:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T15:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:45:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T15:30:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
      ],
      "title": "Land Body Ecologies Festival Day Two",
      "type": "Event",
      "uid": "land-body-ecologies-festival-day-two",
    },
    "filter": {
      "audiences": [],
      "format": "W5fV5iYAACQAMxHb",
      "interpretations": [
        "XkFGqxEAACIAIhNH",
        "WmXl4iQAACUAnyDr",
      ],
      "isAvailableOnline": false,
      "locations": [
        "online",
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2023-06-23T10:20:00.000Z,
          "startDateTime": 2023-06-23T10:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T14:20:00.000Z,
          "startDateTime": 2023-06-23T14:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T12:00:00.000Z,
          "startDateTime": 2023-06-23T11:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T13:30:00.000Z,
          "startDateTime": 2023-06-23T12:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T14:00:00.000Z,
          "startDateTime": 2023-06-23T13:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "startDateTime": 2023-06-23T15:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "startDateTime": 2023-06-23T15:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:45:00.000Z,
          "startDateTime": 2023-06-23T15:30:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
      ],
    },
    "id": "ZFt0WhQAAHnPEH7P",
    "query": {
      "audiences": [],
      "caption": "Explore the deep connections between mental health and ecosystem health in this four-day festival created by Land Body Ecologies (LBE), from teams across India, Uganda, Kenya, Thailand, the UK and the Arctic. Take part and experience performances, food, workshops, music, films and more.",
      "format": "Festival",
      "interpretations": [
        "British Sign Language interpreted",
        "Speech-to-text",
      ],
      "linkedIdentifiers": [
        "W5fV5iYAACQAMxHb",
        "XEnJIhUAAArdgVsW",
        "XkFGqxEAACIAIhNH",
        "WmXl4iQAACUAnyDr",
        "ZFtubBQAAHnPEGEG",
        "ZFteSBQAADxsEBMa",
        "ZFtfvxQAAHnPEBo-",
        "ZFtX3xQAADxsD_RB",
        "ZFtd-BQAAMCZEBGP",
        "ZFtZFBQAAHnPD_n1",
        "ZGTv2hQAADxsOdmn",
        "ZFttJBQAAHnPEFn0",
        "ZFtr3BQAAHnPEFN5",
        "ZFttnRQAAHnPEFyu",
        "ZFtsuRQAAHnPEFfW",
        "ZFtsVxQAAHnPEFXh",
        "ZFuh7hQAAMCZEVTX",
        "XwRXehQAAOMZ-avh",
        "ZGtEqBQAACi-Q2xc",
        "ZIbqVRAAAMwEHpqg",
        "ZFt3UBQAAMFmEIya",
      ],
      "series": [
        {
          "contributors": [
            "Land Body Ecologies",
            "The Hub",
          ],
          "id": "ZFt3UBQAAMFmEIya",
          "title": "Land Body Ecologies Festival",
        },
      ],
      "times": [
        {
          "endDateTime": 2023-06-23T10:20:00.000Z,
          "startDateTime": 2023-06-23T10:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T14:20:00.000Z,
          "startDateTime": 2023-06-23T14:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T12:00:00.000Z,
          "startDateTime": 2023-06-23T11:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T13:30:00.000Z,
          "startDateTime": 2023-06-23T12:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T14:00:00.000Z,
          "startDateTime": 2023-06-23T13:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "startDateTime": 2023-06-23T15:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "startDateTime": 2023-06-23T15:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:45:00.000Z,
          "startDateTime": 2023-06-23T15:30:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T16:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
        {
          "endDateTime": 2023-06-23T17:00:00.000Z,
          "startDateTime": 2023-06-23T09:00:00.000Z,
        },
      ],
      "title": "Land Body Ecologies Festival Day Two",
    },
    "uid": "land-body-ecologies-festival-day-two",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: events/ZJLZoRAAACIARz42) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"WmYRpCQAACUAn-Ap","label":"Gallery tour"}",
      "interpretations": [
        "{"type":"EventInterpretation","id":"XkFGqxEAACIAIhNH","label":"British Sign Language interpreted"}",
      ],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "WmYRpCQAACUAn-Ap",
        "label": "Gallery tour",
        "type": "EventFormat",
      },
      "id": "ZJLZoRAAACIARz42",
      "image": {
        "16:9": {
          "alt": "Photograph of an art installation in gallery space. It's a dark space with black glossy floors and walls. A large parachute suspended from the ceiling which is lit with vibrant pink and orange light. Two visitors are looking at the instillation.",
          "copyright": "From the Collection: For What It’s Worth, 2023. Jess Dobkin |  Gallery photo: Steven Pocock | | | CC-BY-NC | |",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 0.8,
          },
          "id": "ZKgZeBAAACEAfpCr",
          "url": "https://images.prismic.io/wellcomecollection/3e1ef5ca-cf7f-40e5-b1dc-0730a5e11225_EP_002225_007-full.jpg?auto=compress,format&rect=0,0,4000,2250&w=3200&h=1800",
        },
        "32:15": {
          "alt": "Photograph of an art installation in gallery space. It's a dark space with black glossy floors and walls. A large parachute suspended from the ceiling which is lit with vibrant pink and orange light. Two visitors are looking at the instillation.",
          "copyright": "From the Collection: For What It’s Worth, 2023. Jess Dobkin |  Gallery photo: Steven Pocock | | | CC-BY-NC | |",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -150,
            "zoom": 0.8,
          },
          "id": "ZKgZeBAAACEAfpCr",
          "url": "https://images.prismic.io/wellcomecollection/3e1ef5ca-cf7f-40e5-b1dc-0730a5e11225_EP_002225_007-full.jpg?auto=compress,format&rect=0,188,4000,1875&w=3200&h=1500",
        },
        "alt": "Photograph of an art installation in gallery space. It's a dark space with black glossy floors and walls. A large parachute suspended from the ceiling which is lit with vibrant pink and orange light. Two visitors are looking at the instillation.",
        "copyright": "From the Collection: For What It’s Worth, 2023. Jess Dobkin |  Gallery photo: Steven Pocock | | | CC-BY-NC | |",
        "dimensions": {
          "height": 2250,
          "width": 4000,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ZKgZeBAAACEAfpCr",
        "square": {
          "alt": "Photograph of an art installation in gallery space. It's a dark space with black glossy floors and walls. A large parachute suspended from the ceiling which is lit with vibrant pink and orange light. Two visitors are looking at the instillation.",
          "copyright": "From the Collection: For What It’s Worth, 2023. Jess Dobkin |  Gallery photo: Steven Pocock | | | CC-BY-NC | |",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1935,
            "y": 0,
            "zoom": 1.4222222222222223,
          },
          "id": "ZKgZeBAAACEAfpCr",
          "url": "https://images.prismic.io/wellcomecollection/3e1ef5ca-cf7f-40e5-b1dc-0730a5e11225_EP_002225_007-full.jpg?auto=compress,format&rect=1361,0,2250,2250&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/3e1ef5ca-cf7f-40e5-b1dc-0730a5e11225_EP_002225_007-full.jpg?auto=format,compress",
      },
      "interpretations": [
        {
          "id": "XkFGqxEAACIAIhNH",
          "label": "British Sign Language interpreted",
          "type": "EventInterpretation",
        },
      ],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": false,
        "places": [
          {
            "id": "W22bICkAACgA-hVJ",
            "label": "Information Point on level 0",
            "type": "EventPlace",
          },
        ],
        "type": "EventLocations",
      },
      "series": [
        {
          "contributors": [],
          "id": "WlYUDCQAACQAWcdt",
          "title": "Perspective Tours",
        },
      ],
      "times": [
        {
          "endDateTime": 2023-08-24T17:30:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-08-24T16:30:00.000Z,
        },
      ],
      "title": "Perspective Tour With Jess Dobkin",
      "type": "Event",
      "uid": "perspective-tour-with-jess-dobkin",
    },
    "filter": {
      "audiences": [],
      "format": "WmYRpCQAACUAn-Ap",
      "interpretations": [
        "XkFGqxEAACIAIhNH",
      ],
      "isAvailableOnline": false,
      "locations": [
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2023-08-24T17:30:00.000Z,
          "startDateTime": 2023-08-24T16:30:00.000Z,
        },
      ],
    },
    "id": "ZJLZoRAAACIARz42",
    "query": {
      "audiences": [],
      "caption": "Join performance artist Jess Dobkin for a tour of our exhibition ‘Milk’.",
      "format": "Gallery tour",
      "interpretations": [
        "British Sign Language interpreted",
      ],
      "linkedIdentifiers": [
        "WmYRpCQAACUAn-Ap",
        "W22bICkAACgA-hVJ",
        "XkFGqxEAACIAIhNH",
        "Wyu-wCoAACkACpod",
        "ZLeRyBAAACIAwnNz",
        "WlYUDCQAACQAWcdt",
      ],
      "series": [
        {
          "contributors": [],
          "id": "WlYUDCQAACQAWcdt",
          "title": "Perspective Tours",
        },
      ],
      "times": [
        {
          "endDateTime": 2023-08-24T17:30:00.000Z,
          "startDateTime": 2023-08-24T16:30:00.000Z,
        },
      ],
      "title": "Perspective Tour With Jess Dobkin",
    },
    "uid": "perspective-tour-with-jess-dobkin",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: events/ZQgdkREAAAbr6cRR) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"dfc2b7f9-c362-47da-9644-b0f98212ccaa","label":"Event"}",
      "interpretations": [
        "{"type":"EventInterpretation","id":"WmXhziQAACQAnw7i","label":"Audio described"}",
      ],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "dfc2b7f9-c362-47da-9644-b0f98212ccaa",
        "label": "Event",
        "type": "EventFormat",
      },
      "id": "ZQgdkREAAAbr6cRR",
      "image": {
        "16:9": {
          "alt": "A Visitor Experience Assistant standing in a brightly lit gallery giving a tour of the exhibition to visitors. Two museum staff are wearing black t-shirts with "Wellcome Collection" printed in white lettering on their sleeves. ",
          "copyright": "Audio-described tour of 'The Cult of Beauty' exhibition | Gallery photo: Steven Pocock | Wellcome Collection | | CC-BY-NC | |",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 0.8,
          },
          "id": "ZJ2kURAAACIAdBpu",
          "url": "https://images.prismic.io/wellcomecollection/d8e4d673-0874-4888-88f6-ff3ebd7de642_EP_002351_013+4k+16x9.jpg?auto=compress,format&rect=0,0,4000,2250&w=3200&h=1800",
        },
        "32:15": {
          "alt": "A Visitor Experience Assistant standing in a brightly lit gallery giving a tour of the exhibition to visitors. Two museum staff are wearing black t-shirts with "Wellcome Collection" printed in white lettering on their sleeves. ",
          "copyright": "Audio-described tour of 'The Cult of Beauty' exhibition | Gallery photo: Steven Pocock | Wellcome Collection | | CC-BY-NC | |",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -150,
            "zoom": 0.8,
          },
          "id": "ZJ2kURAAACIAdBpu",
          "url": "https://images.prismic.io/wellcomecollection/d8e4d673-0874-4888-88f6-ff3ebd7de642_EP_002351_013+4k+16x9.jpg?auto=compress,format&rect=0,188,4000,1875&w=3200&h=1500",
        },
        "alt": "A Visitor Experience Assistant standing in a brightly lit gallery giving a tour of the exhibition to visitors. Two museum staff are wearing black t-shirts with "Wellcome Collection" printed in white lettering on their sleeves. ",
        "copyright": "Audio-described tour of 'The Cult of Beauty' exhibition | Gallery photo: Steven Pocock | Wellcome Collection | | CC-BY-NC | |",
        "dimensions": {
          "height": 2250,
          "width": 4000,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ZJ2kURAAACIAdBpu",
        "square": {
          "alt": "A Visitor Experience Assistant standing in a brightly lit gallery giving a tour of the exhibition to visitors. Two museum staff are wearing black t-shirts with "Wellcome Collection" printed in white lettering on their sleeves. ",
          "copyright": "Audio-described tour of 'The Cult of Beauty' exhibition | Gallery photo: Steven Pocock | Wellcome Collection | | CC-BY-NC | |",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1244,
            "y": 0,
            "zoom": 1.4222222222222223,
          },
          "id": "ZJ2kURAAACIAdBpu",
          "url": "https://images.prismic.io/wellcomecollection/d8e4d673-0874-4888-88f6-ff3ebd7de642_EP_002351_013+4k+16x9.jpg?auto=compress,format&rect=875,0,2250,2250&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/d8e4d673-0874-4888-88f6-ff3ebd7de642_EP_002351_013+4k+16x9.jpg?auto=compress,format",
      },
      "interpretations": [
        {
          "id": "WmXhziQAACQAnw7i",
          "label": "Audio described",
          "type": "EventInterpretation",
        },
      ],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": false,
        "places": [
          {
            "id": "WrEgqSAAACAAPEw7",
            "label": "Gallery 1",
            "type": "EventPlace",
          },
          {
            "id": "W22bICkAACgA-hVJ",
            "label": "Information Point on level 0",
            "type": "EventPlace",
          },
        ],
        "type": "EventLocations",
      },
      "series": [],
      "times": [
        {
          "endDateTime": 2024-04-11T19:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-11-23T16:00:00.000Z,
        },
        {
          "endDateTime": 2023-11-23T20:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-11-23T16:00:00.000Z,
        },
        {
          "endDateTime": 2023-11-23T18:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-11-23T17:30:00.000Z,
        },
        {
          "endDateTime": 2023-12-16T14:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-12-16T10:00:00.000Z,
        },
        {
          "endDateTime": 2023-12-16T12:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-12-16T11:30:00.000Z,
        },
        {
          "endDateTime": 2024-01-09T18:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-01-09T14:00:00.000Z,
        },
        {
          "endDateTime": 2024-01-09T16:15:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-01-09T15:30:00.000Z,
        },
        {
          "endDateTime": 2024-02-01T20:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-02-01T16:00:00.000Z,
        },
        {
          "endDateTime": 2024-02-01T18:15:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-02-01T17:30:00.000Z,
        },
        {
          "endDateTime": 2024-02-24T14:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-02-24T10:00:00.000Z,
        },
        {
          "endDateTime": 2024-02-24T12:15:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-02-24T11:30:00.000Z,
        },
        {
          "endDateTime": 2024-03-19T18:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-03-19T14:00:00.000Z,
        },
        {
          "endDateTime": 2024-03-19T16:15:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-03-19T15:30:00.000Z,
        },
        {
          "endDateTime": 2024-04-11T19:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-04-11T15:00:00.000Z,
        },
        {
          "endDateTime": 2024-04-11T17:15:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2024-04-11T16:30:00.000Z,
        },
      ],
      "title": "Lights Up on The Cult of Beauty",
      "type": "Event",
      "uid": "lights-up-on-the-cult-of-beauty-11",
    },
    "filter": {
      "audiences": [],
      "format": "dfc2b7f9-c362-47da-9644-b0f98212ccaa",
      "interpretations": [
        "WmXhziQAACQAnw7i",
      ],
      "isAvailableOnline": false,
      "locations": [
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2023-11-23T20:00:00.000Z,
          "startDateTime": 2023-11-23T16:00:00.000Z,
        },
        {
          "endDateTime": 2023-11-23T18:00:00.000Z,
          "startDateTime": 2023-11-23T17:30:00.000Z,
        },
        {
          "endDateTime": 2023-12-16T14:00:00.000Z,
          "startDateTime": 2023-12-16T10:00:00.000Z,
        },
        {
          "endDateTime": 2023-12-16T12:00:00.000Z,
          "startDateTime": 2023-12-16T11:30:00.000Z,
        },
        {
          "endDateTime": 2024-01-09T18:00:00.000Z,
          "startDateTime": 2024-01-09T14:00:00.000Z,
        },
        {
          "endDateTime": 2024-01-09T16:15:00.000Z,
          "startDateTime": 2024-01-09T15:30:00.000Z,
        },
        {
          "endDateTime": 2024-02-01T20:00:00.000Z,
          "startDateTime": 2024-02-01T16:00:00.000Z,
        },
        {
          "endDateTime": 2024-02-01T18:15:00.000Z,
          "startDateTime": 2024-02-01T17:30:00.000Z,
        },
        {
          "endDateTime": 2024-02-24T14:00:00.000Z,
          "startDateTime": 2024-02-24T10:00:00.000Z,
        },
        {
          "endDateTime": 2024-02-24T12:15:00.000Z,
          "startDateTime": 2024-02-24T11:30:00.000Z,
        },
        {
          "endDateTime": 2024-03-19T18:00:00.000Z,
          "startDateTime": 2024-03-19T14:00:00.000Z,
        },
        {
          "endDateTime": 2024-03-19T16:15:00.000Z,
          "startDateTime": 2024-03-19T15:30:00.000Z,
        },
        {
          "endDateTime": 2024-04-11T19:00:00.000Z,
          "startDateTime": 2024-04-11T15:00:00.000Z,
        },
        {
          "endDateTime": 2024-04-11T17:15:00.000Z,
          "startDateTime": 2024-04-11T16:30:00.000Z,
        },
      ],
    },
    "id": "ZQgdkREAAAbr6cRR",
    "query": {
      "audiences": [],
      "caption": "Explore ‘The Cult of Beauty’ exhibition with brighter and more even lighting conditions across the gallery. Audio and BSL digital guides, a visual story, and large-print and braille guides are available for use at these drop-in sessions.",
      "format": "Event",
      "interpretations": [
        "Audio described",
      ],
      "linkedIdentifiers": [
        "WrEgqSAAACAAPEw7",
        "ZQgi7hIAACQAN2QG",
        "ZuBl7REAAB4AgarD",
        "ZQgkIRIAACIAN2X1",
        "ZQgiFxYAACcAYG_6",
        "ZXmjzxAAACMAX3kD",
        "ZXmj5xAAACMAX3l2",
        "ZXmj-xAAACEAX3nP",
        "ZXmkMxAAACEAX3rQ",
        "ZXmkXhAAACEAX3uY",
        "ZXmkgBAAACIAX3w8",
        "ZXmkoBAAACIAX3zL",
        "ZXmkwRAAACEAX31l",
        "ZXmk3BAAACAAX33g",
        "ZXmk8hAAACIAX35E",
      ],
      "series": [],
      "times": [
        {
          "endDateTime": 2023-11-23T20:00:00.000Z,
          "startDateTime": 2023-11-23T16:00:00.000Z,
        },
        {
          "endDateTime": 2023-11-23T18:00:00.000Z,
          "startDateTime": 2023-11-23T17:30:00.000Z,
        },
        {
          "endDateTime": 2023-12-16T14:00:00.000Z,
          "startDateTime": 2023-12-16T10:00:00.000Z,
        },
        {
          "endDateTime": 2023-12-16T12:00:00.000Z,
          "startDateTime": 2023-12-16T11:30:00.000Z,
        },
        {
          "endDateTime": 2024-01-09T18:00:00.000Z,
          "startDateTime": 2024-01-09T14:00:00.000Z,
        },
        {
          "endDateTime": 2024-01-09T16:15:00.000Z,
          "startDateTime": 2024-01-09T15:30:00.000Z,
        },
        {
          "endDateTime": 2024-02-01T20:00:00.000Z,
          "startDateTime": 2024-02-01T16:00:00.000Z,
        },
        {
          "endDateTime": 2024-02-01T18:15:00.000Z,
          "startDateTime": 2024-02-01T17:30:00.000Z,
        },
        {
          "endDateTime": 2024-02-24T14:00:00.000Z,
          "startDateTime": 2024-02-24T10:00:00.000Z,
        },
        {
          "endDateTime": 2024-02-24T12:15:00.000Z,
          "startDateTime": 2024-02-24T11:30:00.000Z,
        },
        {
          "endDateTime": 2024-03-19T18:00:00.000Z,
          "startDateTime": 2024-03-19T14:00:00.000Z,
        },
        {
          "endDateTime": 2024-03-19T16:15:00.000Z,
          "startDateTime": 2024-03-19T15:30:00.000Z,
        },
        {
          "endDateTime": 2024-04-11T19:00:00.000Z,
          "startDateTime": 2024-04-11T15:00:00.000Z,
        },
        {
          "endDateTime": 2024-04-11T17:15:00.000Z,
          "startDateTime": 2024-04-11T16:30:00.000Z,
        },
      ],
      "title": "Lights Up on The Cult of Beauty",
    },
    "uid": "lights-up-on-the-cult-of-beauty-11",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: events/ZRrijRIAAJNSARgG) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [
        "{"type":"EventAudience","id":"WlYWECQAACcAWdBf","label":"Youth event"}",
      ],
      "format": "{"type":"EventFormat","id":"Wn3Q3SoAACsAIeFI","label":"Performance"}",
      "interpretations": [
        "{"type":"EventInterpretation","id":"XkFGqxEAACIAIhNH","label":"British Sign Language interpreted"}",
        "{"type":"EventInterpretation","id":"W5JXVSYAACYAGtkh","label":"Relaxed"}",
      ],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [
        {
          "id": "WlYWECQAACcAWdBf",
          "label": "Youth event",
          "type": "EventAudience",
        },
      ],
      "format": {
        "id": "Wn3Q3SoAACsAIeFI",
        "label": "Performance",
        "type": "EventFormat",
      },
      "id": "ZRrijRIAAJNSARgG",
      "image": {
        "16:9": {
          "alt": "A group of young performers on stage posing for a group portrait. ",
          "copyright": " | | | | | Photo by Sharne Fairchild |",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 0.8,
          },
          "id": "ZVNa_hIAACcAarUk",
          "url": "https://images.prismic.io/wellcomecollection/a37c1539-a43a-490f-9f98-8c282d016a46_Group+shot+by+Sharne+Fairchild.jpg?auto=compress,format&rect=0,0,4000,2250&w=3200&h=1800",
        },
        "32:15": {
          "alt": "A group of young performers on stage posing for a group portrait. ",
          "copyright": " | | | | | Photo by Sharne Fairchild |",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 0.8,
          },
          "id": "ZVNa_hIAACcAarUk",
          "url": "https://images.prismic.io/wellcomecollection/a37c1539-a43a-490f-9f98-8c282d016a46_Group+shot+by+Sharne+Fairchild.jpg?auto=compress,format&rect=0,0,4000,1875&w=3200&h=1500",
        },
        "alt": "A group of young performers on stage posing for a group portrait. ",
        "copyright": " | | | | | Photo by Sharne Fairchild |",
        "dimensions": {
          "height": 2250,
          "width": 4000,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ZVNa_hIAACcAarUk",
        "square": {
          "alt": "A group of young performers on stage posing for a group portrait. ",
          "copyright": " | | | | | Photo by Sharne Fairchild |",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1244.4444444444446,
            "y": 0,
            "zoom": 1.4222222222222223,
          },
          "id": "ZVNa_hIAACcAarUk",
          "url": "https://images.prismic.io/wellcomecollection/a37c1539-a43a-490f-9f98-8c282d016a46_Group+shot+by+Sharne+Fairchild.jpg?auto=compress,format&rect=875,0,2250,2250&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/a37c1539-a43a-490f-9f98-8c282d016a46_Group+shot+by+Sharne+Fairchild.jpg?auto=format,compress",
      },
      "interpretations": [
        {
          "id": "XkFGqxEAACIAIhNH",
          "label": "British Sign Language interpreted",
          "type": "EventInterpretation",
        },
        {
          "id": "W5JXVSYAACYAGtkh",
          "label": "Relaxed",
          "type": "EventInterpretation",
        },
      ],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": false,
        "places": [
          {
            "id": "W8XfKxEAADwYer9D",
            "label": "The Studio and the Forum",
            "type": "EventPlace",
          },
        ],
        "type": "EventLocations",
      },
      "series": [],
      "times": [
        {
          "endDateTime": 2023-11-18T16:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-11-18T14:00:00.000Z,
        },
      ],
      "title": "Standards, My Right to Beauty",
      "type": "Event",
      "uid": "standards--my-right-to-beauty",
    },
    "filter": {
      "audiences": [
        "WlYWECQAACcAWdBf",
      ],
      "format": "Wn3Q3SoAACsAIeFI",
      "interpretations": [
        "XkFGqxEAACIAIhNH",
        "W5JXVSYAACYAGtkh",
      ],
      "isAvailableOnline": false,
      "locations": [
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2023-11-18T16:00:00.000Z,
          "startDateTime": 2023-11-18T14:00:00.000Z,
        },
      ],
    },
    "id": "ZRrijRIAAJNSARgG",
    "query": {
      "audiences": [
        "Youth event",
      ],
      "caption": "Join an afternoon of performance and discussion about beauty in which the audience plays an important part, including deciding on the running order and joining in debates.",
      "format": "Performance",
      "interpretations": [
        "British Sign Language interpreted",
        "Relaxed",
      ],
      "linkedIdentifiers": [
        "Wn3Q3SoAACsAIeFI",
        "W8XfKxEAADwYer9D",
        "XkFGqxEAACIAIhNH",
        "W5JXVSYAACYAGtkh",
        "WlYWECQAACcAWdBf",
        "WyvU0ioAACkACvwK",
        "ZRrmchIAACAAASlI",
        "ZRrnCxIAACAAASwU",
      ],
      "series": [],
      "times": [
        {
          "endDateTime": 2023-11-18T16:00:00.000Z,
          "startDateTime": 2023-11-18T14:00:00.000Z,
        },
      ],
      "title": "Standards, My Right to Beauty",
    },
    "uid": "standards--my-right-to-beauty",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: events/ZSPXJBAAACIAiERm) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"Wd-QYCcAACcAoiJS","label":"Discussion"}",
      "interpretations": [
        "{"type":"EventInterpretation","id":"X2jPiRMAACIA8Vzo","label":"Auto-captioned"}",
      ],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":true,"label":"Catch-up event"}",
      "locations": [
        "{"id":"online","label":"Online","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "Wd-QYCcAACcAoiJS",
        "label": "Discussion",
        "type": "EventFormat",
      },
      "id": "ZSPXJBAAACIAiERm",
      "image": {
        "16:9": {
          "alt": "An laptop sitting on a desk, on the laptop screen is an etching from a 17th-century book where a woman is applying cream to her face while looking at a mirror.",
          "copyright": "Exploring Research Seminar | Photo: Kathleen Arundell. Image on screen: from the frontispiece to The Accomplished Ladies Delight, Hannah Woolley, 1675|  Wellcome Collection | | CC-BY | |",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 1.25,
          },
          "id": "ZSamWhAAACAAlKe0",
          "url": "https://images.prismic.io/wellcomecollection/48caaf01-f243-4117-a4af-36c386acd345_EP_002514_001.jpg?auto=compress,format&rect=0,0,2560,1440&w=3200&h=1800",
        },
        "32:15": {
          "alt": "An laptop sitting on a desk, on the laptop screen is an etching from a 17th-century book where a woman is applying cream to her face while looking at a mirror.",
          "copyright": "Exploring Research Seminar | Photo: Kathleen Arundell. Image on screen: from the frontispiece to The Accomplished Ladies Delight, Hannah Woolley, 1675|  Wellcome Collection | | CC-BY | |",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -150,
            "zoom": 1.25,
          },
          "id": "ZSamWhAAACAAlKe0",
          "url": "https://images.prismic.io/wellcomecollection/48caaf01-f243-4117-a4af-36c386acd345_EP_002514_001.jpg?auto=compress,format&rect=0,120,2560,1200&w=3200&h=1500",
        },
        "alt": "An laptop sitting on a desk, on the laptop screen is an etching from a 17th-century book where a woman is applying cream to her face while looking at a mirror.",
        "copyright": "Exploring Research Seminar | Photo: Kathleen Arundell. Image on screen: from the frontispiece to The Accomplished Ladies Delight, Hannah Woolley, 1675|  Wellcome Collection | | CC-BY | |",
        "dimensions": {
          "height": 1440,
          "width": 2560,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ZSamWhAAACAAlKe0",
        "square": {
          "alt": "An laptop sitting on a desk, on the laptop screen is an etching from a 17th-century book where a woman is applying cream to her face while looking at a mirror.",
          "copyright": "Exploring Research Seminar | Photo: Kathleen Arundell. Image on screen: from the frontispiece to The Accomplished Ladies Delight, Hannah Woolley, 1675|  Wellcome Collection | | CC-BY | |",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1244,
            "y": 0,
            "zoom": 2.2222222222222223,
          },
          "id": "ZSamWhAAACAAlKe0",
          "url": "https://images.prismic.io/wellcomecollection/48caaf01-f243-4117-a4af-36c386acd345_EP_002514_001.jpg?auto=compress,format&rect=560,0,1440,1440&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/48caaf01-f243-4117-a4af-36c386acd345_EP_002514_001.jpg?auto=format,compress",
      },
      "interpretations": [
        {
          "id": "X2jPiRMAACIA8Vzo",
          "label": "Auto-captioned",
          "type": "EventInterpretation",
        },
      ],
      "isAvailableOnline": true,
      "locations": {
        "attendance": [
          {
            "id": "online",
            "label": "Online",
            "type": "EventAttendance",
          },
        ],
        "isOnline": true,
        "places": undefined,
        "type": "EventLocations",
      },
      "series": [
        {
          "contributors": [],
          "id": "W5Zj_CYAACQALK5B",
          "title": "Exploring research",
        },
      ],
      "times": [
        {
          "endDateTime": 2023-11-14T16:30:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-11-14T15:00:00.000Z,
        },
      ],
      "title": "Recipes for early modern beauty",
      "type": "Event",
      "uid": "recipes-for-early-modern-beauty",
    },
    "filter": {
      "audiences": [],
      "format": "Wd-QYCcAACcAoiJS",
      "interpretations": [
        "X2jPiRMAACIA8Vzo",
      ],
      "isAvailableOnline": true,
      "locations": [
        "online",
      ],
      "times": [
        {
          "endDateTime": 2023-11-14T16:30:00.000Z,
          "startDateTime": 2023-11-14T15:00:00.000Z,
        },
      ],
    },
    "id": "ZSPXJBAAACIAiERm",
    "query": {
      "audiences": [],
      "caption": "Join an online conversation about early modern health and beauty routines, and what they reveal about western European women’s lives.",
      "format": "Discussion",
      "interpretations": [
        "Auto-captioned",
      ],
      "linkedIdentifiers": [
        "Wd-QYCcAACcAoiJS",
        "X2jPiRMAACIA8Vzo",
        "Wyu-rCoAACsACpm_",
        "ZIAyLRAAACEAANjv",
        "ZSP5ThAAACIAiMsF",
        "ZSP7IhAAACMAiNPU",
        "Wyu-0CoAACkACppp",
        "ZSP8zBAAACEAiNuV",
        "W5Zj_CYAACQALK5B",
      ],
      "series": [
        {
          "contributors": [],
          "id": "W5Zj_CYAACQALK5B",
          "title": "Exploring research",
        },
      ],
      "times": [
        {
          "endDateTime": 2023-11-14T16:30:00.000Z,
          "startDateTime": 2023-11-14T15:00:00.000Z,
        },
      ],
      "title": "Recipes for early modern beauty",
    },
    "uid": "recipes-for-early-modern-beauty",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: events/ZTevFxAAACQAyHEk) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"WcKmiysAACx_A8NR","label":"Workshop"}",
      "interpretations": [],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "WcKmiysAACx_A8NR",
        "label": "Workshop",
        "type": "EventFormat",
      },
      "id": "ZTevFxAAACQAyHEk",
      "image": {
        "16:9": {
          "alt": "People sitting around a table with laptops editing Wikipedia pages and listening to a facilitator.",
          "copyright": "Wikithon Event | Photo: Thomas S. G. Farnetti | Wellcome Collection | | CC-BY-NC ",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": 0,
            "zoom": 0.920863309352518,
          },
          "id": "ZTfEHxAAACQAyNMD",
          "url": "https://images.prismic.io/wellcomecollection/89a8299e-a07e-40b6-8b02-020e29442b70_EP_000607_088+16x9+4K.jpg?auto=compress,format&rect=0,0,3475,1955&w=3200&h=1800",
        },
        "32:15": {
          "alt": "People sitting around a table with laptops editing Wikipedia pages and listening to a facilitator.",
          "copyright": "Wikithon Event | Photo: Thomas S. G. Farnetti | Wellcome Collection | | CC-BY-NC ",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -150,
            "zoom": 0.920863309352518,
          },
          "id": "ZTfEHxAAACQAyNMD",
          "url": "https://images.prismic.io/wellcomecollection/89a8299e-a07e-40b6-8b02-020e29442b70_EP_000607_088+16x9+4K.jpg?auto=compress,format&rect=0,163,3475,1629&w=3200&h=1500",
        },
        "alt": "People sitting around a table with laptops editing Wikipedia pages and listening to a facilitator.",
        "copyright": "Wikithon Event | Photo: Thomas S. G. Farnetti | Wellcome Collection | | CC-BY-NC ",
        "dimensions": {
          "height": 1955,
          "width": 3475,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "ZTfEHxAAACQAyNMD",
        "square": {
          "alt": "People sitting around a table with laptops editing Wikipedia pages and listening to a facilitator.",
          "copyright": "Wikithon Event | Photo: Thomas S. G. Farnetti | Wellcome Collection | | CC-BY-NC ",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1243,
            "y": 0,
            "zoom": 1.6368286445012787,
          },
          "id": "ZTfEHxAAACQAyNMD",
          "url": "https://images.prismic.io/wellcomecollection/89a8299e-a07e-40b6-8b02-020e29442b70_EP_000607_088+16x9+4K.jpg?auto=compress,format&rect=760,0,1955,1955&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/89a8299e-a07e-40b6-8b02-020e29442b70_EP_000607_088+16x9+4K.jpg?auto=format,compress",
      },
      "interpretations": [],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": false,
        "places": [
          {
            "id": "XVqn7RMAACIAxvVM",
            "label": "Wellcome Kitchen",
            "type": "EventPlace",
          },
        ],
        "type": "EventLocations",
      },
      "series": [],
      "times": [
        {
          "endDateTime": 2023-11-22T14:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2023-11-22T11:00:00.000Z,
        },
      ],
      "title": "Sexing Up the Internet",
      "type": "Event",
      "uid": "sexing-up-the-internet",
    },
    "filter": {
      "audiences": [],
      "format": "WcKmiysAACx_A8NR",
      "interpretations": [],
      "isAvailableOnline": false,
      "locations": [
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2023-11-22T14:00:00.000Z,
          "startDateTime": 2023-11-22T11:00:00.000Z,
        },
      ],
    },
    "id": "ZTevFxAAACQAyHEk",
    "query": {
      "audiences": [],
      "caption": "Join Sophia and Wellcome digital editor Alice White at a Wikipedia edit-a-thon, and make your own contributions to Wikipedia pages about sexual health.",
      "format": "Workshop",
      "interpretations": [],
      "linkedIdentifiers": [
        "WcKmiysAACx_A8NR",
        "XVqn7RMAACIAxvVM",
        "Wyu-0CoAACkACppp",
        "ZTev3RAAACYAyHTx",
        "WfLM2yoAAKKpVrxD",
        "Wyu-rCoAACsACpm_",
        "ZVIKWBIAACcAZMlz",
      ],
      "series": [],
      "times": [
        {
          "endDateTime": 2023-11-22T14:00:00.000Z,
          "startDateTime": 2023-11-22T11:00:00.000Z,
        },
      ],
      "title": "Sexing Up the Internet",
    },
    "uid": "sexing-up-the-internet",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: exhibitions/Yzv9ChEAABfUrkVp) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"050ff9da-f8b6-4b15-9054-cbfca48766bc","label":"Exhibition"}",
      "interpretations": [],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "050ff9da-f8b6-4b15-9054-cbfca48766bc",
        "label": "Exhibition",
        "type": "EventFormat",
      },
      "id": "Yzv9ChEAABfUrkVp",
      "image": {
        "16:9": {
          "alt": "Photograph of a gallery exhibition space showing large tapestry hung on a wooden wall. The tapestry is made up of a black and white, archive photograph, from the early 20th century showing a group of white men and women gathered in a group holding museum artefacts in their hands or on their laps. They are surrounded by other museum exhibits and display cases. The tapestry is framed with a bright yellow border. Surrounding the tapestry is a wider wooden structure containing seating and alcoves. To the right of the image a gallery visitor reclines in one of the alcoves with her back to the tapestry, in contemplation. To the right two more visitors, one sitting, one standing are looking at the tapestry. The standing visitor is listening to an audio guide on headphones. The hues of the scene are warm browns and olive greens.",
          "copyright": "The Healing Pavilion, exhibition | Artworks: Grace Ndiritu. Gallery photos: Steven Pocock | Wellcome Collection | | CC-BY ||",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -268,
            "zoom": 0.8,
          },
          "id": "Y4dnVhEAACMAGAEU",
          "url": "https://images.prismic.io/wellcomecollection/73d43a2a-5b3f-44e5-8699-56895f94b596_EP_002115_046.jpg?auto=compress,format&rect=0,335,4000,2250&w=3200&h=1800",
        },
        "32:15": {
          "alt": "Photograph of a gallery exhibition space showing large tapestry hung on a wooden wall. The tapestry is made up of a black and white, archive photograph, from the early 20th century showing a group of white men and women gathered in a group holding museum artefacts in their hands or on their laps. They are surrounded by other museum exhibits and display cases. The tapestry is framed with a bright yellow border. Surrounding the tapestry is a wider wooden structure containing seating and alcoves. To the right of the image a gallery visitor reclines in one of the alcoves with her back to the tapestry, in contemplation. To the right two more visitors, one sitting, one standing are looking at the tapestry. The standing visitor is listening to an audio guide on headphones. The hues of the scene are warm browns and olive greens.",
          "copyright": "The Healing Pavilion, exhibition | Artworks: Grace Ndiritu. Gallery photos: Steven Pocock | Wellcome Collection | | CC-BY ||",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": 0,
            "y": -387.20000000000005,
            "zoom": 0.8,
          },
          "id": "Y4dnVhEAACMAGAEU",
          "url": "https://images.prismic.io/wellcomecollection/73d43a2a-5b3f-44e5-8699-56895f94b596_EP_002115_046.jpg?auto=compress,format&rect=0,484,4000,1875&w=3200&h=1500",
        },
        "alt": "Photograph of a gallery exhibition space showing large tapestry hung on a wooden wall. The tapestry is made up of a black and white, archive photograph, from the early 20th century showing a group of white men and women gathered in a group holding museum artefacts in their hands or on their laps. They are surrounded by other museum exhibits and display cases. The tapestry is framed with a bright yellow border. Surrounding the tapestry is a wider wooden structure containing seating and alcoves. To the right of the image a gallery visitor reclines in one of the alcoves with her back to the tapestry, in contemplation. To the right two more visitors, one sitting, one standing are looking at the tapestry. The standing visitor is listening to an audio guide on headphones. The hues of the scene are warm browns and olive greens.",
        "copyright": "The Healing Pavilion, exhibition | Artworks: Grace Ndiritu. Gallery photos: Steven Pocock | Wellcome Collection | | CC-BY ||",
        "dimensions": {
          "height": 2667,
          "width": 4000,
        },
        "edit": {
          "background": "#fff",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "Y4dnVhEAACMAGAEU",
        "square": {
          "alt": "Photograph of a gallery exhibition space showing large tapestry hung on a wooden wall. The tapestry is made up of a black and white, archive photograph, from the early 20th century showing a group of white men and women gathered in a group holding museum artefacts in their hands or on their laps. They are surrounded by other museum exhibits and display cases. The tapestry is framed with a bright yellow border. Surrounding the tapestry is a wider wooden structure containing seating and alcoves. To the right of the image a gallery visitor reclines in one of the alcoves with her back to the tapestry, in contemplation. To the right two more visitors, one sitting, one standing are looking at the tapestry. The standing visitor is listening to an audio guide on headphones. The hues of the scene are warm browns and olive greens.",
          "copyright": "The Healing Pavilion, exhibition | Artworks: Grace Ndiritu. Gallery photos: Steven Pocock | Wellcome Collection | | CC-BY ||",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "#fff",
            "x": -1599.4000749906263,
            "y": 0,
            "zoom": 1.1998500187476566,
          },
          "id": "Y4dnVhEAACMAGAEU",
          "url": "https://images.prismic.io/wellcomecollection/73d43a2a-5b3f-44e5-8699-56895f94b596_EP_002115_046.jpg?auto=compress,format&rect=1333,0,2667,2667&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/73d43a2a-5b3f-44e5-8699-56895f94b596_EP_002115_046.jpg?auto=format,compress",
      },
      "interpretations": [],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": false,
        "places": undefined,
        "type": "EventLocations",
      },
      "series": [],
      "times": [
        {
          "endDateTime": 2023-04-22T23:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2022-11-24T00:00:00.000Z,
        },
      ],
      "title": "The Healing Pavilion",
      "type": "Event",
      "uid": "the-healing-pavilion",
    },
    "filter": {
      "audiences": [],
      "format": "050ff9da-f8b6-4b15-9054-cbfca48766bc",
      "interpretations": [],
      "isAvailableOnline": false,
      "locations": [
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2023-04-22T23:00:00.000Z,
          "startDateTime": 2022-11-24T00:00:00.000Z,
        },
      ],
    },
    "id": "Yzv9ChEAABfUrkVp",
    "query": {
      "audiences": [],
      "caption": "‘The Healing Pavilion’ is a new art commission by British-Kenyan visual artist Grace Ndiritu, which radically reimagines what textiles and architecture can do in a museum burdened by colonial history.",
      "format": [
        "Exhibition",
      ],
      "interpretations": [],
      "linkedIdentifiers": [
        "Wux6DyIAAO5n3lzk",
        "Yzv-ThEAAA__rki5",
      ],
      "series": [],
      "times": [
        {
          "endDateTime": 2023-04-22T23:00:00.000Z,
          "startDateTime": 2022-11-24T00:00:00.000Z,
        },
      ],
      "title": "The Healing Pavilion",
    },
    "uid": "the-healing-pavilion",
  },
]
`;

exports[`eventDocument transformer transforms events from Prismic to the expected format (document: exhibitions/Z1hLIxAAAB4AVAWG) 1`] = `
[
  {
    "aggregatableValues": {
      "audiences": [],
      "format": "{"type":"EventFormat","id":"050ff9da-f8b6-4b15-9054-cbfca48766bc","label":"Exhibition"}",
      "interpretations": [],
      "isAvailableOnline": "{"type":"OnlineAvailabilityBoolean","value":false,"label":"Catch-up event"}",
      "locations": [
        "{"id":"in-our-building","label":"In our building","type":"EventAttendance"}",
      ],
    },
    "display": {
      "audiences": [],
      "format": {
        "id": "ZmmnbhEAACIAF5Uc",
        "label": "Display",
        "type": "EventFormat",
      },
      "id": "Z1hLIxAAAB4AVAWG",
      "image": {
        "16:9": {
          "alt": "Photograph of three people chatting in an exhibition gallery. In the centre one of the people is discussing a zine they have held open in their hands with the other two people, who are sat on a large double bed, made up of a pink mattress and orange pillows. To the side of the bed is a display table with more zines and a tablet in a holder.",
          "copyright": "Zines Forever! DIY Publications and Disability Justice, a Display at Wellcome Collection. Gallery Photo: Benjamin Gilbert | | | | CC-BY-NC | |",
          "dimensions": {
            "height": 1800,
            "width": 3200,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 1,
          },
          "id": "Z-QetXdAxsiBv74b",
          "url": "https://images.prismic.io/wellcomecollection/Z-QetXdAxsiBv74b_017-BTG250304142757.jpg?auto=format%2Ccompress&w=3200&h=1800",
        },
        "32:15": {
          "alt": "Photograph of three people chatting in an exhibition gallery. In the centre one of the people is discussing a zine they have held open in their hands with the other two people, who are sat on a large double bed, made up of a pink mattress and orange pillows. To the side of the bed is a display table with more zines and a tablet in a holder.",
          "copyright": "Zines Forever! DIY Publications and Disability Justice, a Display at Wellcome Collection. Gallery Photo: Benjamin Gilbert | | | | CC-BY-NC | |",
          "dimensions": {
            "height": 1500,
            "width": 3200,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 260,
            "zoom": 1,
          },
          "id": "Z-QetXdAxsiBv74b",
          "url": "https://images.prismic.io/wellcomecollection/Z-QetXdAxsiBv74b_017-BTG250304142757.jpg?auto=format%2Ccompress&rect=0%2C260%2C4000%2C1875&w=3200&h=1500",
        },
        "alt": "Photograph of three people chatting in an exhibition gallery. In the centre one of the people is discussing a zine they have held open in their hands with the other two people, who are sat on a large double bed, made up of a pink mattress and orange pillows. To the side of the bed is a display table with more zines and a tablet in a holder.",
        "copyright": "Zines Forever! DIY Publications and Disability Justice, a Display at Wellcome Collection. Gallery Photo: Benjamin Gilbert | | | | CC-BY-NC | |",
        "dimensions": {
          "height": 2250,
          "width": 4000,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 1,
        },
        "id": "Z-QetXdAxsiBv74b",
        "square": {
          "alt": "Photograph of three people chatting in an exhibition gallery. In the centre one of the people is discussing a zine they have held open in their hands with the other two people, who are sat on a large double bed, made up of a pink mattress and orange pillows. To the side of the bed is a display table with more zines and a tablet in a holder.",
          "copyright": "Zines Forever! DIY Publications and Disability Justice, a Display at Wellcome Collection. Gallery Photo: Benjamin Gilbert | | | | CC-BY-NC | |",
          "dimensions": {
            "height": 3200,
            "width": 3200,
          },
          "edit": {
            "background": "transparent",
            "x": 292,
            "y": 0,
            "zoom": 1,
          },
          "id": "Z-QetXdAxsiBv74b",
          "url": "https://images.prismic.io/wellcomecollection/Z-QetXdAxsiBv74b_017-BTG250304142757.jpg?auto=format%2Ccompress&rect=292%2C0%2C2250%2C2250&w=3200&h=3200",
        },
        "type": "PrismicImage",
        "url": "https://images.prismic.io/wellcomecollection/Z-QetXdAxsiBv74b_017-BTG250304142757.jpg?auto=format,compress",
      },
      "interpretations": [],
      "isAvailableOnline": false,
      "locations": {
        "attendance": [
          {
            "id": "in-our-building",
            "label": "In our building",
            "type": "EventAttendance",
          },
        ],
        "isOnline": false,
        "places": undefined,
        "type": "EventLocations",
      },
      "series": [],
      "times": [
        {
          "endDateTime": 2025-09-14T17:00:00.000Z,
          "isFullyBooked": {
            "inVenue": false,
            "online": false,
          },
          "startDateTime": 2025-03-14T10:00:00.000Z,
        },
      ],
      "title": "Zines Forever! DIY Publishing and Disability Justice",
      "type": "Event",
      "uid": "zines-forever-diy-publishing-and-disability-justice",
    },
    "filter": {
      "audiences": [],
      "format": "050ff9da-f8b6-4b15-9054-cbfca48766bc",
      "interpretations": [],
      "isAvailableOnline": false,
      "locations": [
        "in-our-building",
      ],
      "times": [
        {
          "endDateTime": 2025-09-14T17:00:00.000Z,
          "startDateTime": 2025-03-14T10:00:00.000Z,
        },
      ],
    },
    "id": "Z1hLIxAAAB4AVAWG",
    "query": {
      "audiences": [],
      "caption": "Discover how self-published zines have been used to share individual expriences of disability and disabled identity. You can see, touch, listen to and create your own zines in this display, drawn from our collections.",
      "format": [
        "Exhibition",
        "Display",
      ],
      "interpretations": [],
      "linkedIdentifiers": [
        "ZmmnbhEAACIAF5Uc",
      ],
      "series": [],
      "times": [
        {
          "endDateTime": 2025-09-14T17:00:00.000Z,
          "startDateTime": 2025-03-14T10:00:00.000Z,
        },
      ],
      "title": "Zines Forever! DIY Publishing and Disability Justice",
    },
    "uid": "zines-forever-diy-publishing-and-disability-justice",
  },
]
`;
